<resources>
    <string name="app_name">WBook</string>

    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>

    <!-- Strings related to main -->
    <string name="main_action_sign_in">Log-in</string>
    <string name="main_action_register">아직 회원이 아니세요?</string>

    <!-- Strings related to register -->
    <string name="register_action_repetition_check">중복체크</string>
    <string name="register_action_register">회원가입</string>
    <string name="register_prompt_password_confirm">비밀번호 확인</string>
    <string name="register_prompt_name_confirm">이름</string>

</resources>
